tests/snapshots/test__tests__indirect_right_recursion.snap
---
source: tests/test.rs
expression: "format!(\"{:#?}\", engine)"
---
Engine {
    union: U16U16U32U32U32(
        EngineBase {
            grammar: Grammar {
                start_nonterminal: "start[1]",
                rules: "B[0] ::= \"y\"[0]A[2] | \"y\"[0];\nstart[1] ::= A[2]\"\n\"[1];\nA[2] ::= \"x\"[2]B[0] | \"x\"[2];\n",
                id_to_regexes: {},
                id_to_regex_first_bytes: [],
                id_to_terminals: [
                    (
                        "\"\n\"[1]",
                        [
                            10,
                        ],
                    ),
                    (
                        "\"x\"[2]",
                        [
                            120,
                        ],
                    ),
                    (
                        "\"y\"[0]",
                        [
                            121,
                        ],
                    ),
                ],
            },
            allowed_first_bytes: [],
            allowed_token_ids: [],
            token_ids_to_finish: [],
            earley_sets: [
                [
                    EarleyItemDebugStruct {
                        dotted_rule: "start[1] -> .A[2]\"\n\"[1]",
                        start_position: 0,
                        state: "",
                    },
                    EarleyItemDebugStruct {
                        dotted_rule: "A[2] -> .\"x\"[2]B[0]",
                        start_position: 0,
                        state: "[0]",
                    },
                    EarleyItemDebugStruct {
                        dotted_rule: "A[2] -> .\"x\"[2]",
                        start_position: 0,
                        state: "[0]",
                    },
                ],
                [
                    EarleyItemDebugStruct {
                        dotted_rule: "B[0] -> \"y\"[0].A[2]",
                        start_position: 0,
                        state: "",
                    },
                    EarleyItemDebugStruct {
                        dotted_rule: "start[1] -> A[2].\"\n\"[1]",
                        start_position: 0,
                        state: "[0]",
                    },
                    EarleyItemDebugStruct {
                        dotted_rule: "A[2] -> .\"x\"[2]B[0]",
                        start_position: 1,
                        state: "[0]",
                    },
                    EarleyItemDebugStruct {
                        dotted_rule: "A[2] -> .\"x\"[2]",
                        start_position: 1,
                        state: "[0]",
                    },
                ],
            ],
            cache: [],
            to_be_completed_items: [],
            to_be_completed_items_buffer: [],
            deduplication_buffer: [],
            postdot_items: [
                (
                    DottedDebugStruct {
                        postdot_nonterminal: "A[2]",
                        column: 0,
                    },
                    NormalItems(
                        [
                            EarleyItemDebugStruct {
                                dotted_rule: "start[1] -> .A[2]\"\n\"[1]",
                                start_position: 0,
                                state: "",
                            },
                        ],
                    ),
                ),
                (
                    DottedDebugStruct {
                        postdot_nonterminal: "A[2]",
                        column: 1,
                    },
                    LeoEligible(
                        EarleyItemDebugStruct {
                            dotted_rule: "B[0] -> \"y\"[0].A[2]",
                            start_position: 0,
                            state: "",
                        },
                    ),
                ),
            ],
            column_to_postdot_items: [
                (
                    1,
                    [
                        "A[2]",
                    ],
                ),
            ],
            postdot_items_since_last_commit: [],
            leo_items: [
                (
                    DottedDebugStruct {
                        postdot_nonterminal: "B[0]",
                        column: 0,
                    },
                    ToBeCompletedItemDebugStruct {
                        nonterminal: "A[2]",
                        start_position: 0,
                    },
                ),
            ],
            leo_items_buffer: [],
            already_predicted_nonterminals: [],
            finished: false,
            config: EngineConfig {
                cache_enabled: true,
                compaction_enabled: true,
            },
            regex_start_config: Config {
                look_behind: None,
                anchored: Yes,
            },
        },
    ),
}
